SASS hacks completed

--- a/_notebooks/2023-12-05-FinalSASSLesson.ipynb
+++ b/_notebooks/2023-12-05-FinalSASSLesson.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "In the design phase of any project, maintaining uniformity is extremely important for creating a polished look. SASS allows for this by allowing the use of variables to store and reuse colors, fonts, and other design elements.\n",
     "\n",
-    "This makes it so that there is a ________ theme applied throughout the entire project. SASS allows for visual cohesion."
+    "This makes it so that there is a **consistent** theme applied throughout the entire project. SASS allows for visual cohesion."
    ]
   },
   {
@@ -120,14 +120,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This also allows for feedback and _______. People can make adjustments to the visual elements without complexity of functional code, and it makes sure that all requirements are met. "
+    "This also allows for feedback and **iteration**. People can make adjustments to the visual elements without complexity of functional code, and it makes sure that all requirements are met. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These visual concepts also play a role in planning the _______ design. The team members can visualize how layouts and styles are adapted for different ________ _________, so that all users can have a great visual experience across all types of devices. "
+    "These visual concepts also play a role in planning the **responsive** design. The team members can visualize how layouts and styles are adapted for different **screen** **size**, so that all users can have a great visual experience across all types of devices. "
    ]
   },
   {
@@ -148,13 +148,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "One of the things that you can do that the lesson doesn't cover is the SCSS has some built in functions that enable you to modify elements as if they were javascript, or work with math easier and better as well as manipulate strings "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example, in JavaScript to adjust an element, you would approach it like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "const width = 100;\n",
+    "const padding = 10;\n",
+    "const margin = 20;\n",
+    "\n",
+    "const element = document.querySelector('.element');\n",
+    "element.style.width = `${width + padding * 2}px`;\n",
+    "element.style.marginLeft = `${margin / 2}px`;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But with SCSS you can approach it like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$width: 100px;\n",
+    "$padding: 10px;\n",
+    "$margin: 20px;\n",
+    "\n",
+    ".element {\n",
+    "  width: $width + $padding * 2;\n",
+    "  margin-left: $margin / 2;\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another example of this is with colors, in javascript you would have to do this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "const baseColor = '#3498db';\n",
+    "const element = document.querySelector('.element');\n",
+    "\n",
+    "element.style.backgroundColor = darkenColor(baseColor, 10);\n",
+    "element.style.border = `1px solid ${lightenColor(baseColor, 20)}`;\n",
+    "\n",
+    "function darkenColor(color, percent) {\n",
+    "  // Implement color darkening logic\n",
+    "}\n",
+    "\n",
+    "function lightenColor(color, percent) {\n",
+    "  // Implement color lightening logic\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But SCSS simplifies this and enables us to do this instead:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$base-color: #3498db;\n",
+    "\n",
+    ".element {\n",
+    "  background-color: darken($base-color, 10%);\n",
+    "  border: 1px solid lighten($base-color, 20%);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SCSS also provides functions for strings and maths:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    ".round(1.2);          // returns 1\n",
+    ".ceil(1.2);           // returns 2\n",
+    ".floor(1.2);          // returns 1\n",
+    ".abs(-1.2);           // returns 1.2\n",
+    ".min(1, 2, 3);        // returns 1\n",
+    ".max(1, 2, 3);        // returns 3\n",
+    ".random(1, 100);      // returns a random number between 1 and 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    ".to-upper-case(\"hello world\");  // returns \"HELLO WORLD\"\n",
+    ".to-lower-case(\"HELLO WORLD\");  // returns \"hello world\"\n",
+    ".str-index(\"hello world\", \"world\"); // returns the index of the first occurrence of \"world\"\n",
+    ".str-insert(\"hello\", \" world\", 5);  // inserts \" world\" into \"hello\" at position 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Partials and Modular Styling with SASS\n",
     "\n",
     "### Understanding SASS Partials:\n",
     "\n",
     "SASS partials are separate files containing any specific style or component. They allow for better organization and modularization of styles. They play a very important role in organizing and modularizing styles. \n",
     "\n",
-    "Partials are named with a leading underscore (e.g., `_variables.sass`) to indicate that they are meant to be ______ into another stylesheet.\n",
+    "Partials are named with a leading underscore (e.g., `_variables.sass`) to indicate that they are meant to be **imported** into another stylesheet.\n",
     "\n",
     "### Benefits of Using Partials:\n",
     "\n",
@@ -167,7 +326,7 @@
     "\n",
     "3. **Readability and Collaboration:**\n",
     "   - Smaller files enhance code readability. Developers can quickly locate and understand specific styles.\n",
-    "   - Supports ________ development, allowing different team members to work on different partials simultaneously.\n",
+    "   - Supports **concurrent** development, allowing different team members to work on different partials simultaneously.\n",
     "\n",
     "### Importing Partials into a Main SASS File:\n",
     "\n",
@@ -212,7 +371,7 @@
     "\n",
     "### Introduction to Variables:\n",
     "\n",
-    "SASS variables provide a way to store information for later use in a stylesheet. They offer several advantages, including enhanced maintainability and consistency, by allowing you to define values in ______ location.\n",
+    "SASS variables provide a way to store information for later use in a stylesheet. They offer several advantages, including enhanced maintainability and consistency, by allowing you to define values in **one** location.\n",
     "\n",
     "\n",
     "\n",
@@ -447,10 +606,10 @@
     "Flexbox and Grid are two powerful layout systems in CSS that allow for responsive design and complex layouts with less effort.\n",
     "\n",
     "### Flexbox\n",
-    "- **Purpose**: Designed for one-dimensional layouts (either ____ or ____).\n",
+    "- **Purpose**: Designed for one-dimensional layouts (either **rows** or **columns**).\n",
     "\n",
     "### Grid\n",
-    "- **Purpose**: Designed for ____ -dimensional layouts ( ____ and ____ together).\n",
+    "- **Purpose**: Designed for **two** -dimensional layouts ( **rows** and **columns** together).\n",
     "\n",
     "## Simplifying Responsive Layouts with SASS\n",
     "\n",
@@ -571,6 +730,41 @@
     "## Hacks\n",
     "\n",
     "Create a grid layout that automatically adjusts the number of columns based on the screen size, using SASS variables and functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```sass\n",
+    "\n",
+    "$base-columns: 4;\n",
+    "$min-width: 600px;\n",
+    "$max-width: 1200px;\n",
+    "$min-column-width: 150px;\n",
+    "$max-column-width: 250px;\n",
+    "\n",
+    "@mixin responsive-grid() {\n",
+    "  $num-columns: $base-columns;\n",
+    "\n",
+    "  @media screen and (min-width: $min-width) {\n",
+    "    $num-columns: $base-columns + 2;\n",
+    "  }\n",
+    "\n",
+    "  @media screen and (min-width: $max-width) {\n",
+    "    $num-columns: $base-columns + 4;\n",
+    "  }\n",
+    "\n",
+    "  grid-template-columns: repeat($num-columns, minmax($min-column-width, $max-column-width));\n",
+    "}\n",
+    "\n",
+    ".container {\n",
+    "  display: grid;\n",
+    "  gap: 20px;\n",
+    "  @include responsive-grid();\n",
+    "}\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -753,6 +947,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```sass\n",
+    "@function adjust-color($base-color, $steps) {\n",
+    "    $colors: ();\n",
+    "  \n",
+    "    @for $i from 0 to $steps {\n",
+    "      $adjusted-color: adjust-hue($base-color, 0); // the color functions that I mentioned in my hack above\n",
+    "      $adjusted-color: darken($adjusted-color, $i * 5%);\n",
+    "      $adjusted-color: desaturate($adjusted-color, $i * 3%);\n",
+    "      $adjusted-color: lighten($adjusted-color, $i * 5%);\n",
+    "  \n",
+    "      $colors: append($colors, $adjusted-color);\n",
+    "    }\n",
+    "  \n",
+    "    @return $colors;\n",
+    "  }\n",
+    "  \n",
+    "  $base-blue: #3498db;\n",
+    "  $color-steps: 3;\n",
+    "  \n",
+    "  $generated-colors: adjust-color($base-blue, $color-steps);\n",
+    "  \n",
+    "  .grid-container {\n",
+    "    display: grid;\n",
+    "    grid-template-columns: repeat(3, 1fr);\n",
+    "    grid-gap: 10px;\n",
+    "  \n",
+    "    .grid-item {\n",
+    "      height: 100px;\n",
+    "      width: 100px;\n",
+    "      border-radius: 8px;\n",
+    "  \n",
+    "      @for $i from 1 through length($generated-colors) {\n",
+    "        &:nth-child(#{$color-steps}n + #{$i}) {\n",
+    "          background-color: nth($generated-colors, $i);\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  }  \n",
+    "  ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Extending & Inheritance\n",
     "\n"
    ]
@@ -815,7 +1054,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -868,7 +1111,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -912,11 +1159,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "css"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$primary-color: 'red'; //invalid color value\n",
+    "\n",
+    "@mixin validate-color($color) {\n",
+    "  @if type-of($color) != color {\n",
+    "    @error \"Invalid color provided: #{$color}. Please provide a valid color.\";\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    ".element {\n",
+    "  background-color: $primary-color;\n",
+    "  @include validate-color($primary-color);\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Popcorn Hack 2:\n",
     "Modify the base font size and observe the @debug message. Try different font sizes and see how it affects the calculated line height."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "css"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// SCSS Syntax\n",
+    "$font-size-base: 300px; // Try changing this value to observe @debug output\n",
+    "\n",
+    "@function calculate-line-height($font-size) {\n",
+    "  @debug \"Calculating line height for font size: #{$font-size}px\";\n",
+    "\n",
+    "  $line-height-ratio: 1.5; \n",
+    "  $line-height: $font-size * $line-height-ratio;\n",
+    "\n",
+    "  @return $line-height;\n",
+    "}\n",
+    "body {\n",
+    "  font-size: $font-size-base;\n",
+    "  line-height: calculate-line-height($font-size-base);\n",
+    "}"
    ]
   },
   {
@@ -930,6 +1228,13 @@
     "### Example Image\n",
     "\n",
     "![pixil-frame-0 (1)](https://github.com/Ant11234/student/assets/40652645/509214d6-bf1a-40f7-9028-cfd4b9f212da)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**done above**"
    ]
   },
   {
@@ -1095,13 +1400,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.9.12"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.9+9-Ubuntu-120.04"
   },
   "vscode": {
    "interpreter": {
