--- a/_notebooks/2023-12-07-CRUD-JQUERY-HACKS.ipynb
+++ b/_notebooks/2023-12-07-CRUD-JQUERY-HACKS.ipynb
@@ -57,7 +57,10 @@
     "    // code\n",
     "  });\n",
     "\n",
-    "5. Why do we use JQUERY with CRUD?"
+    "5. Why do we use JQUERY with CRUD?\n",
+    "\n",
+    "\n",
+    "JQUERY is used with CRUD because it has cross-browser compatibility, enables for simplified DOM manipulation, better event handling, allows for implementing AJAX, and makes syntax much simpler, enabling for an easier time in developing a interactive feature"
    ]
   },
   {
@@ -174,10 +177,19 @@
     "\n",
     "  $('#data-table').on('click', '.update-btn', function() {\n",
     "    const idToEdit = $(this).data('id');\n",
-    "    const updateIndex = initialData.findIndex(item => item.id === idToEdit);\n",
+    "    const newName = prompt('Enter the updated name:');\n",
+    "    const newEmail = prompt('Enter the updated email:');\n",
+    "    \n",
+    "    const newData = initialData.map(item => {\n",
+    "      if (item.id === idToEdit) {\n",
+    "        return { ...item, name: newName, email: newEmail };\n",
+    "      } else {\n",
+    "        return item;\n",
+    "      }\n",
+    "    });\n",
+    "\n",
     "    renderData(newData);\n",
     "  });\n",
-    "\n",
     "\n",
     "  // Initial rendering\n",
     "  renderData(initialData);\n",
