--- a/_notebooks/2023-12-14-HashmapsLesson.ipynb
+++ b/_notebooks/2023-12-14-HashmapsLesson.ipynb
@@ -66,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could use collections for things such as for example: storing pervious purchase histories or current purchase history, tracking things like in a library, borrowing and leasing a book, when it came in, when it left the library and so on."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -80,11 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -133,11 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -179,32 +178,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prices for Nike shoes: [41.97, 80.97]\n",
+      "Prices for Vans shoes: [55.0]\n",
+      "Prices for Adidas shoes: [69.99]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "import java.util.HashMap;  \n",
+    "import java.util.HashMap;\n",
+    "import java.util.ArrayList;\n",
+    "import java.util.Set;\n",
     "\n",
     "public class ShoePrices {\n",
     "    public static void main(String[] args) {\n",
     "\n",
-    "        HashMap<String, Double> hashMap = new HashMap<>();\n",
+    "        HashMap<String, ArrayList<Double>> shoePricesMap = new HashMap<>();\n",
     "\n",
-    "        hashMap.put(\"Nike\", 41.97);\n",
-    "        hashMap.put(\"Nike\", 80.97);\n",
-    "        hashMap.put(\"Adidas\", 69.99);\n",
-    "        hashMap.put(\"Vans\", 55.00);\n",
+    "        shoePricesMap.computeIfAbsent(\"Nike\", k -> new ArrayList<>()).add(41.97);\n",
+    "        shoePricesMap.computeIfAbsent(\"Nike\", k -> new ArrayList<>()).add(80.97);\n",
+    "        shoePricesMap.computeIfAbsent(\"Adidas\", k -> new ArrayList<>()).add(69.99);\n",
+    "        shoePricesMap.computeIfAbsent(\"Vans\", k -> new ArrayList<>()).add(55.00);\n",
     "\n",
-    "        double value = hashMap.get(\"Nike\");\n",
-    "        System.out.println(\"A Nike shoe would cost \" + value);\n",
+    "        Set<String> shoeBrands = shoePricesMap.keySet();\n",
+    "\n",
+    "        for (String brand : shoeBrands) {\n",
+    "            ArrayList<Double> prices = shoePricesMap.get(brand);\n",
+    "            System.out.println(\"Prices for \" + brand + \" shoes: \" + prices);\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
-    "ShoePrices.main(null);"
+    "ShoePrices.main(null)\n"
    ]
   },
   {
@@ -231,11 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -279,11 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -327,11 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -386,11 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -430,11 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -474,11 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -520,11 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -565,11 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -624,11 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -664,11 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -709,11 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -764,11 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -816,11 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -866,11 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -927,11 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@Data\n",
@@ -952,11 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@Id\n",
@@ -978,11 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import org.springframework.data.jpa.repository.JpaRepository;\n",
@@ -1001,7 +944,12 @@
     "\n",
     "List all of the JPA methods that you see in the PersonJpaRepository.java file and what their purpose is.\n",
     "\n",
-    "Some of the methods that I saw in the PersonJpaRepository.java file were: findByEmail, findAllByOrderByNameAsc,findByNameContainingIgnoreCaseOrEmailContainingIgnoreCase, findByEmailAndPassword, findByLikeTermNative \n",
+    "Some of the methods that I saw in the PersonJpaRepository.java file were: \n",
+    "- findByEmail: To find the person using their email \n",
+    "- findAllByOrderByNameAsc: Using the ASCII format to find the person by their name\n",
+    "- findByNameContainingIgnoreCaseOrEmailContainingIgnoreCase: Find a person using their email or their name and ignoring upper and lower case\n",
+    "- findByEmailAndPassword: Find a person with matching email and password \n",
+    "- findByLikeTermNative: Finds a person whose name is similar to the word that was entered\n",
     "\n",
     "#### Custom JPA Queries\n",
     "\n",
@@ -1011,11 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@Query(\n",
@@ -1053,11 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@ManyToMany(fetch = EAGER)\n",
@@ -1093,6 +1033,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The realationship between the `Person` object and the `PersonRole` object is a many to many relationship and what this means is that multiple roles can be applied to more than one person but at the same time, the person might not have all the roles. This enables for much more organized managing of different \"roles\" in a single person"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Many-to-One Relationship\n",
     "\n",
     "On the other hand, there is also a \"Many-to-One\" relationship that can exist between two objects. It means that multiple instances of one entity (the \"many\" side) are associated with a single instance of another entity (the \"one\" side). This can be seen applied to the `Note` object in relation to the `Person` object."
@@ -1101,11 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@ManyToOne(fetch = FetchType.LAZY, optional = false)\n",
@@ -1130,6 +1073,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The “tutorial_id” column represents a key in the database table, and represents the many-to-one relationship with the “id” column. Each entry in the table is has a specific \"Person\" object attached to it because of \"tutorial_id\"   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Storing HashMaps with jsonb\n",
     "\n",
     "JSONB is a binary representation of JSON data. It is a data type used in some relational databases (such as SQL databases) to store JSON documents in a more efficient and flexible way compared to traditional JSON. Within SQL databases, this data from the JSON can often be filtered, searched and/or extracted using provided functions."
@@ -1138,11 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@JdbcTypeCode(SqlTypes.JSON)\n",
@@ -1188,9 +1134,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
-   "version": "21+35-LTS-2513"
+   "version": "17.0.9+9-Ubuntu-120.04"
   },
   "orig_nbformat": 4
  },
