--- a/_notebooks/2023-12-14-HashmapsLesson.ipynb
+++ b/_notebooks/2023-12-14-HashmapsLesson.ipynb
@@ -1122,6 +1122,44 @@
     "- Implementing JPA repository methods (think CRUD methods, custom queries, etc.) would show interest in modifying SQL database data.\n",
     "- Take extra notes on this lesson that show deeper research into Collections and SQL."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Here is my attempt for the Hacks:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While i managed to get the main data table working fine:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While working on the hacks I came across some problems while trying to implement the many to many relationship on my travis scott data table using collaborators (features). I spent 3 hours trying to fix it before I eventually gave up. My attempt at trying to implement it can be seen below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![1](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash2.png)\n",
+    "![2](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash3.png)\n",
+    "![3](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash4.png)\n",
+    "![4](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash5.png)"
+   ]
   }
  ],
  "metadata": {
