--- a/_notebooks/2023-12-14-HashmapsLesson.ipynb
+++ b/_notebooks/2023-12-14-HashmapsLesson.ipynb
@@ -87,7 +87,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -136,7 +140,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -179,7 +187,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -242,7 +254,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -286,7 +302,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -330,7 +350,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -385,7 +409,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,7 +453,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -465,7 +497,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -507,7 +543,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -548,7 +588,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -603,7 +647,11 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -639,7 +687,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -680,7 +732,11 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -731,7 +787,11 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -779,7 +839,11 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -825,7 +889,11 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -882,7 +950,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "@Data\n",
@@ -903,7 +975,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "@Id\n",
@@ -925,7 +1001,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "import org.springframework.data.jpa.repository.JpaRepository;\n",
@@ -959,7 +1039,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "@Query(\n",
@@ -997,7 +1081,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "@ManyToMany(fetch = EAGER)\n",
@@ -1048,7 +1136,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "@ManyToOne(fetch = FetchType.LAZY, optional = false)\n",
@@ -1088,7 +1180,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "@JdbcTypeCode(SqlTypes.JSON)\n",
@@ -1160,6 +1256,181 @@
     "![3](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash4.png)\n",
     "![4](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/hash5.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Additional Notes:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the lesson covered a large amount of topics, one thing that piqued my interest that wasn't really talked about was the Queue, LinkedList, PriorityQueue, and Deque "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Queue:*\n",
+    "\n",
+    "First-In-First-Out Order:\n",
+    "\n",
+    "- Items are added at the rear (end) and removed from the front (beginning).\n",
+    "- Ensures that the first element added is the first one to be removed.\n",
+    "\n",
+    "LinkedList:\n",
+    "\n",
+    "Elements stored in nodes.\n",
+    "- Each node has a reference to the next node in the sequence.\n",
+    "- Enqueue: Adding a node at the end.\n",
+    "- Dequeue: Removing a node from the front.\n",
+    "\n",
+    "PriorityQueue:\n",
+    "\n",
+    "- Elements are assigned priorities.\n",
+    "- Highest priority elements are dequeued first.\n",
+    "- Implementation may use a binary heap or other data structures.\n",
+    "\n",
+    "*Queue Example:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dequeued: Jishnu\n",
+      "Remaining elements in the queue: [David, Alex, Derrick, Kaiden, Ethan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.LinkedList;\n",
+    "import java.util.Queue;\n",
+    "\n",
+    "public class QueueExample {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Creating a Queue using LinkedList\n",
+    "        Queue<String> queue = new LinkedList<>();\n",
+    "\n",
+    "        // Queuing people\n",
+    "        queue.add(\"Jishnu\");\n",
+    "        queue.add(\"David\");\n",
+    "        queue.add(\"Alex\");\n",
+    "        queue.add(\"Derrick\");\n",
+    "        queue.add(\"Kaiden\");\n",
+    "        queue.add(\"Ethan\");\n",
+    "\n",
+    "        // Remove people from the front\n",
+    "        String firstPerson = queue.poll();\n",
+    "        System.out.println(\"Dequeued: \" + firstPerson);\n",
+    "\n",
+    "        // Display the remaining elements in the queue\n",
+    "        System.out.println(\"Remaining elements in the queue: \" + queue);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "QueueExample.main(null)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Deque:*\n",
+    "- Supports insertion and removal at both ends.\n",
+    "- Can be used as a queue or a stack, depending on the operations performed.\n",
+    "\n",
+    "Operations:\n",
+    "\n",
+    "- `addFirst()`: Adds an element to the front of the deque.\n",
+    "- `addLast()`: Adds an element to the rear of the deque.\n",
+    "- `removeFirst()`: Removes and returns the element from the front.\n",
+    "- `removeLast()`: Removes and returns the element from the rear.\n",
+    "\n",
+    "*Example:*\n",
+    "\n",
+    "ArrayDeque:\n",
+    "- Implements a deque using a resizable array.\n",
+    "- Allows dynamic resizing for efficient memory usage.\n",
+    "- Supports constant-time (O(1)) operations for add and remove at both ends.\n",
+    "\n",
+    "*Deque Example:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed from the front: Jishnu\n",
+      "Removed from the rear: Ethan\n",
+      "Remaining elements in the deque: [David, Alex, Derrick, Kaiden]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayDeque;\n",
+    "import java.util.Deque;\n",
+    "\n",
+    "public class DequeExample {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Creating a Deque using ArrayDeque\n",
+    "        Deque<String> deque = new ArrayDeque<>();\n",
+    "\n",
+    "        // Adding elements at both ends\n",
+    "        deque.addFirst(\"Jishnu\");\n",
+    "        deque.addLast(\"David\");\n",
+    "        deque.addLast(\"Alex\");\n",
+    "        deque.addLast(\"Derrick\");\n",
+    "        deque.addLast(\"Kaiden\");\n",
+    "        deque.addLast(\"Ethan\");\n",
+    "\n",
+    "        // Removing elements from both ends\n",
+    "        String firstPerson = deque.removeFirst();\n",
+    "        String lastPerson = deque.removeLast();\n",
+    "\n",
+    "        System.out.println(\"Removed from the front: \" + firstPerson);\n",
+    "        System.out.println(\"Removed from the rear: \" + lastPerson);\n",
+    "\n",
+    "        // Display the remaining elements in the deque\n",
+    "        System.out.println(\"Remaining elements in the deque: \" + deque);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "DequeExample.main(null)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*When are they useful?*\n",
+    "\n",
+    "- Efficient for scenarios where elements need to be added or removed from both ends of the data structure.\n",
+    "- Can be used in algorithms that require manipulation of data at the beginning and end of a sequence.\n",
+    "- Both Queue and Deque data structures can be applied in a wide range of algorithms and problems, providing flexibility in managing and processing data in a sequential manner.\n"
+   ]
   }
  ],
  "metadata": {
@@ -1172,7 +1443,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.9+9-Ubuntu-120.04"
   },
